style.css
body{
    margin:0;
    padding:0;
    background-color: rgba(128, 128, 128, 0.514);
}
body,html{
    height:100%;
    overflow:hidden;
}
h1{
    font-size: 28px;
    color: black;
}
.main_menu{
    text-align:center;
    display:flex;
    flex-direction:column;
    padding:12px;
    gap:10px;
    position:fixed;
    top: 20%;
    left: 0;
    right:0;
    width:20%;
    flex-wrap:wrap;
    margin: -100px auto 0 auto;
}
a{
    margin-left:1em;
}
a:hover, a:visited:hover{
    color: white;
    text-decoration: none;
}
.main_menu > button{
    background-color:beige;
}
.pvp_button:hover{
    background-color:rgb(255, 115, 0);
    color:white;
}
.pvcpu_normal_button:hover{
    background-color:crimson;
    color:white;
}
.pvcpu_hard_button:hover{
    background-color:rgb(255, 36, 0);
    color:white;
}
.pvcpu_unbeatable_button:hover{
    background-color:red;
    color:white;
}
.start_button:hover{
    background-color:yellowgreen;
    color:white;
}
a:-webkit-any-link {
    color:black;
    cursor: pointer;
    text-decoration: none;
    width:100%;
}
.positions{
    display:grid;
    grid-template-columns:repeat(3,1fr);
    grid-template-rows:repeat(3,1fr);
    width:25%;
    height:25%;
    top: 33%;
    left:44%;
    margin-left:-6em;
    position:absolute;
}
.positions > button{
    position:relative;
    background-color: rgba(128, 128, 128, 0.514);
    min-width:3em;
    min-height:3em;
    font-size:1.5em;
    border-radius:0.8em;
    border-color:black;
    z-index:1;
}
.positions > button:hover{
    background-color:green;
}
.header_para{
    top:0;
    left:40%;
    display:flex;
    justify-content: center;
    align-items:center;
    margin-left:1em;
    font-size:2.3em;
    text-align:center;
}
.reset_button{
    position:absolute;
    top:70%;
    right:25%;
    padding:1.1em;
    width:50%;
    height:auto;
    font-size:1.1em;
    border-color:black;
    z-index:1;
}
.reset_button:hover{
    color:rgb(255, 102, 0);
    background-color:gray;
}
.change_player_one_name_button,.change_player_two_name_button{
    display:flex;
    justify-content: center;
    align-items: center;
    margin-top:1.2em;
    margin-left:-2em;
    padding:1.1em;
    font-size:1.1em;
    max-width:22%;
    min-width: 15%;
    max-height:15%;
    overflow:hidden;
    z-index:1;
}
.change_player_one_name_button:hover{
    background-color:lightslategray;
}
.change_player_two_name_button:hover{
    background-color:lightslategray;
}
.change_player_one_name_button{
    position:fixed;
    left:30%;
    background-color: black;
    border-color: white;
    color:white;
    border-width:0.3em;
}
.change_player_two_name_button{
    position:fixed;
    left:60%;
    background-color:white;
    color:black;
    border-width:0.3em;
} 
.go_back_button{
    width: auto;
    position:absolute;
    margin-left:3%;
    margin-top: -3em;
    padding:1.1em;
    border-radius:1em;
    background-color: gray;
    color:white;
}
.go_back_button:hover{
    background-color: orange;
}
.change_player_one_modal,.change_player_two_modal{
    background-color:rgba(0, 0, 0, 0.801);
    min-width:100%;
    min-height:100%;
    z-index:1;
    display:none;
}
#change_player_one_form,#change_player_two_form{
    text-align: center;
    font-size: 1em;
    padding:1em;
    display:flex;
    flex-direction: column;
    min-width:12%;
    gap:4px;
    height:20%;
    position:fixed;
    top:35%;
    left:49%;
    margin-left:-115px;
    margin-right:0;
    background-color: rgb(219, 216, 216);
    z-index:1;
}
.change_player_one_legend,.change_player_two_legend{
    text-align: center;
}
.form_buttons{
    display:flex;
    justify-content: center;
    align-items: center;
    gap:4px;
}

